summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: not found: value findBiscuit
  findBiscuit()
  ^