summative.moria.Moria.scala.code
gauche()
gauche()
while(!estFaceMur){
  findBiscuit()
  demiPosDemi
}
droite()
avance()
gauche()
avance()




def demiPosDemi(){
  while(!estSurBiscuit){
    if(estSurBiscuit){
    prendBiscuit()
    recule()
  }
  avance()
  poseBiscuit()
  avance()
}

def findBiscuit(){
  while(!estSurBiscuit && !estFaceMur){
    avance()

  	}

}
}
